--- a/src/Pages/Article/New/article-new.html
+++ b/src/Pages/Article/New/article-new.html
@@ -27,7 +27,7 @@
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button type="submit" name="publish" class="btn btn-primary">Publish now</button>
-        <button type="submit" name="save" class="btn btn-default ml1">Save. Publish later</button>
+        <button type="submit" name="save" class="btn btn-default ml1">Save to draft</button>
       </div>
     </div>
 
