--- a/src/Pages/Article/Show/article-show.html
+++ b/src/Pages/Article/Show/article-show.html
@@ -14,19 +14,19 @@
         <td>{{ article.id }}</td>
       </tr>
       <tr>
-        <td class="text-bold">Published</td>
-        <td>{{ article.published == true ? 'Yes' : 'No' }}</td>
+        <td class="text-bold">Published date</td>
+        {% if article.published_at %}
+          <td>{{ article.published_at|date('d M Y H:i:s') }}</td>
+        {% else %}
+          <td><em class="text-warning">Not yet published</em></td>
+        {% endif %}
       </tr>
       <tr>
         <td class="text-bold">Created</td>
         <td>{{ article.created_at|date('d M Y H:i:s') }}</td>
       </tr>
       <tr>
-        {% if article.published == true %}
-          <td class="text-bold">Published date</td>
-        {% else %}
-          <td class="text-bold">Last modified</td>
-        {% endif %}
+        <td class="text-bold">Last modified</td>
         <td>{{ article.updated_at|date('d M Y H:i:s') }}</td>
       </tr>
       <tr>
